Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html> 
 
 <html>
+  <body>
+    <head>
+      <title>TITLE</title>
+    </head>
+  </body>
   <head>
     <title>TITLE</title>
   </head>
